Add html and js minifier, dotenv, refactor media build structure, start env and default env and such

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>Eofol4 app - Second page</h1>
-  <img src="./phi.svg" alt="Eofol logo greek letter Phi" height="192px" width="192px" class="phi" />
+  <img src="./assets/media/icons/phi.svg" alt="Eofol logo greek letter Phi" height="192px" width="192px" class="phi" />
 
   <p id="script">Script not injected.</p>
   <p id="module">External dependency not imported.</p>
@@ -8,9 +8,9 @@
   <a href="./index.html">First page</a>
 </div>
 <style>
-    .phi {
-        background-color: #1a9595;
-        border-radius: 8px;
-        margin: 32px 0 32px 0;
-    }
+  .phi {
+    background-color: #1a9595;
+    border-radius: 8px;
+    margin: 32px 0 32px 0;
+  }
 </style>
