--- a/compiler/head/base.css
+++ b/compiler/head/base.css
@@ -1,34 +1,41 @@
 html {
-  margin: 0;
-  height: 100%;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -webkit-text-size-adjust: 100%;
-  line-height: 1.5;
-  -moz-osx-font-smoothing: grayscale;
-  touch-action: manipulation;
+    margin: 0;
+    height: 100%;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
+    line-height: 1.5;
+    -moz-osx-font-smoothing: grayscale;
+    touch-action: manipulation;
 }
 
 body {
-  margin: 0;
-  height: 100%;
-  background-size: cover;
-  background-color: #1a202c;
-  background-blend-mode: multiply;
-  background-attachment: fixed;
-  background-image: url("./assets/media/images/rainbow-mountains-peru.jpg");
-  font-family: Inter, sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  color: #edf2f7;
+    margin: 0;
+    height: 100%;
+    background-size: cover;
+    background-color: #1a202c;
+    background-blend-mode: multiply;
+    background-attachment: fixed;
+    background-image: url("./assets/media/images/rainbow-mountains-peru.jpg");
+    font-family: Inter, sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: #edf2f7;
 }
 
 .container {
-  margin: 0 auto 0 auto;
-  padding: 32px 32px;
-  text-align: center;
+    margin: 0 auto 0 auto;
+    padding: 32px 32px;
+    text-align: center;
 }
 
 p {
-  margin: 0 0 0 0;
+    margin: 0 0 0 0;
+}
+
+
+.phi {
+    background-color: #1a9595;
+    border-radius: 8px;
+    margin: 32px 0 32px 0;
 }
