Refactor and extract plugin

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -5,5 +5,5 @@
   <p id="script">Script not injected.</p>
   <p id="module">External dependency not imported.</p>
 
-  <a href="./index2.html">Second page</a>
+  <a href="./index.html">Index page</a>
 </div>
