--- a/compiler-data/styles/base.css
+++ b/compiler-data/styles/base.css
@@ -38,3 +38,15 @@ p {
   border-radius: 8px;
   margin: 32px 0 32px 0;
 }
+
+body::-webkit-scrollbar {
+  width: 16px;
+}
+
+body::-webkit-scrollbar-thumb {
+  height: 56px;
+  border-radius: 8px;
+  border: 4px solid transparent;
+  background-color: hsl(0, 0%, 67%);
+  background-clip: content-box;
+}
