Watch file changes and hot update on change, style links

--- a/compiler-data/styles/base.css
+++ b/compiler-data/styles/base.css
@@ -33,6 +33,24 @@ p {
   margin: 0 0 0 0;
 }
 
+a {
+  text-decoration: none;
+  font-weight: 700;
+  color: #1a9595;
+}
+
+a:visited {
+  color: #197a7a;
+}
+
+a:hover {
+  color: #46c8c8;
+}
+
+a:active {
+  color: #197a7a;
+}
+
 .phi {
   background-color: #1a9595;
   border-radius: 8px;
