--- a/templates/map.html
+++ b/templates/map.html
@@ -3,6 +3,6 @@
   <img src="./assets/media/icons/phi.svg" alt="Eofol logo greek letter Phi" height="192px" width="192px" class="phi" />
 
   <div class="container">
-    <ul style="text-align: left; display: inline-block;" id='map-list'></ul>
+    <ul style="text-align: left; display: inline-block" id="map-list"></ul>
   </div>
 </div>
