--- a/templates/map.html
+++ b/templates/map.html
@@ -2,7 +2,7 @@
   <h1>Eofol4 app - Map</h1>
   <img src="./assets/media/icons/phi.svg" alt="Eofol logo greek letter Phi" height="192px" width="192px" class="phi" />
 
-  <div class="container">
+  <div class="m-t-md col">
     <ul style="text-align: left; display: inline-block" id="map-list"></ul>
   </div>
 </div>
