--- a/templates/index2.html
+++ b/templates/index2.html
@@ -5,5 +5,5 @@
   <p id="script">Script not injected.</p>
   <p id="module">External dependency not imported.</p>
 
-  <a href="./index.html">Index page</a>
+  <div><a href="./index.html">Index page</a></div>
 </div>
