Add themed base styles, fix some minor errors, type internals, split base styles into base flat and base themed

--- a/compiler-data/styles/base.css
+++ b/compiler-data/styles/base.css
@@ -13,18 +13,12 @@ body {
   margin: 0;
   height: 100%;
   background-size: cover;
-  background-color: #1a202c;
   background-blend-mode: multiply;
   background-attachment: fixed;
-  font-family: Inter, sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  color: #edf2f7;
 }
 
 .container {
   margin: 0 auto 0 auto;
-  padding: 32px 32px;
   text-align: center;
 }
 
@@ -34,26 +28,6 @@ p {
 
 a {
   text-decoration: none;
-  font-weight: 700;
-  color: #30cccc;
-}
-
-a:visited {
-  color: #299393;
-}
-
-a:hover {
-  color: #4fd1d1;
-}
-
-a:active {
-  color: #4fd1d1;
-}
-
-.phi {
-  background-color: #1a9595;
-  border-radius: 8px;
-  margin: 32px 0 32px 0;
 }
 
 .col {
@@ -65,8 +39,7 @@ a:active {
   margin-top: 16px;
 }
 
-.license-container {
-  max-width: 800px;
+.container-md {
   margin: 0 auto 0 auto;
 }
 
