Add before & after middleware to Slice API, add Slice API counter example

--- a/compiler-data/styles/base.css
+++ b/compiler-data/styles/base.css
@@ -36,6 +36,12 @@ a {
   flex-direction: column;
 }
 
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 .m-t-md {
   margin-top: 16px;
 }
