Add fontface declaration to pages and relativize font paths

--- a/compiler-data/styles/base.css
+++ b/compiler-data/styles/base.css
@@ -7,6 +7,7 @@ html {
   line-height: 1.5;
   -moz-osx-font-smoothing: grayscale;
   touch-action: manipulation;
+  font-family: system-ui, sans-serif;
 }
 
 body {
