Do not dynamically compile theme styles for containers in order to boost performance

--- a/compiler-data/styles/base.css
+++ b/compiler-data/styles/base.css
@@ -42,7 +42,14 @@ a {
   margin-top: 16px;
 }
 
+.container {
+  margin: 0 auto 0 auto;
+  text-align: center;
+  padding: 32px 32px;
+}
+
 .container-md {
+  max-width: 1200px;
   margin: 0 auto 0 auto;
 }
 
